# auto_gippity

./: Cargo.toml
src/: main.rs
src/apis/: call_request.rs
src/helpers/: command_line.rs  general.rs  mod.rs
src/models/: mod.rs
src/models/agent_basic/: basic_agent.rs  basic_traits.rs
src/models/agent_manager/: managing_agent.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
src/models/general/: llm.rs
