[package]
name = "auto_gippity"
version = "0.1.0"
edition = "2024"

[dependencies]
ai_functions = "0.1.1"
async-trait = "0.1.88"
crossterm = "0.29.0"
dotenv = "0.15.0"
reqwest = "0.12.23"
serde = "1.0.219"
serde_json = "1.0.142"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = "1.47.1"
webbrowser = "1.0.5"
